Wed Oct 17 05:05:07 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_invoke_block): vm_caller_setup_args() can skip
	  when splat flag is not set.

Wed Oct 17 01:53:47 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar, vm_setivar): support index inline cache
	  with rb_call_info_t to speedup `attr' getter and setter.
	  Cached index is stored in rb_call_info_t::aux::index.
	  `index' == 0 means not cached. `index' > 0 means cached and cached
	  index is `index - 1'.

	* insns.def ((get|set)instancevariable): use new wrapper functions
	  vm_(get|set)instancevariable() defined in vm_insnhelper.c.

	* vm_core.h (rb_call_info_t::aux): introduce new union data because
	  opt_pc can share with index.

Tue Oct 16 22:24:44 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb (show_results): Show speedup ratio
	  with first executables score at last of results
	  if two or more executrables are given.

Tue Oct 16 21:59:01 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: some refactoring.
	  (1) Remove `average differential'.
	      In this benchmark driver, We should not care about `average'.
	      We use fastest score because this score should not include
	      any disturbances (affections of background process, etc).
	      If you care about timing affect, I recommend `median'
	      score with more than 5 examinations rather than simple
	      `average' score (`average' score was affected by error scores).
	  (2) Show log file name.
	  (3) Change default directory from './' to driver's directory.

Tue Oct 16 14:56:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): need to check again after any conversion run.
	  [ruby-core:48012] [Bug #7168]

Tue Oct 16 12:52:14 2012  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/envutil.rb (Test::Unit::Assertions#assert_file):
	  rename from file_assertion.

Tue Oct 16 11:30:18 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
