@@ -1,3 +1,11 @@
+Wed Oct 17 05:35:37 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/bm_vm1_yield.rb: add a benchmark to measure `yield'
+	  (invoke empty block) performance.
+
+	* benchmark/bm_vm2_method_with_block.rb: add a benchmark to measure
+	  method invocation with empty block.
+
 Wed Oct 17 05:05:07 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.c (vm_invoke_block): vm_caller_setup_args() can skip
